--- a/ETL/notebook.ipynb
+++ b/ETL/notebook.ipynb
@@ -2,84 +2,199 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from sqlalchemy import create_engine"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#get the current directory\n",
-    "path_etl=os.getcwd()"
+    "POSTGRES_USER='aalonso'\n",
+    "POSTGRES_PASS='ITBA'\n",
+    "POSTGRES_HOST=\"localhost\"\n",
+    "POSTGRES_DB='database_pizza'\n",
+    "POSTGRES_PORT='5432'\n",
+    "POSTGRES_SCHEMA='schema_pizza'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_csv='\\\\csv_files\\\\'"
+    "str_conection=f\"postgresql://{POSTGRES_USER}:{POSTGRES_PASS}@{POSTGRES_HOST}:{POSTGRES_PORT}/{POSTGRES_DB}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 128,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "engine=create_engine(str_conection,\n",
+    "connect_args={'options': f'-csearch_path={POSTGRES_SCHEMA}'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn = engine.connect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "csv_dict={\"pizza_types\":\"pizzas_types.xlsx\",\n",
+    "\"pizzas\":\"pizzas.xlsx\",\n",
+    "\"orders\":\"orders.xlsx\",\n",
+    "\"order_details\":\"order_details.xlsx\",\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df=pd.read_excel(r'\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\\order_details.xlsx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'\\\\\\\\wsl$\\\\Ubuntu\\\\home\\\\ariel\\\\TP-Foundations\\\\csv_files\\\\'"
+       "42"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "path_csv"
+    "df['name'].str.len().max()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "\n",
-    "with open('json_table.json') as f:\n",
-    "    tables_dict=json.load(f)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "order_details.xlsx\n",
-      "orders.xlsx\n",
-      "pizzas_types.xlsx\n",
-      "pizzas.xlsx\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 21350 entries, 0 to 21349\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column       Non-Null Count  Dtype         \n",
+      "---  ------       --------------  -----         \n",
+      " 0   order_id     21350 non-null  int64         \n",
+      " 1   date         21350 non-null  datetime64[ns]\n",
+      " 2   time         21350 non-null  object        \n",
+      " 3   year         21350 non-null  int64         \n",
+      " 4   month        21350 non-null  int64         \n",
+      " 5   day_of_week  21350 non-null  int64         \n",
+      " 6   hour         21350 non-null  int64         \n",
+      "dtypes: datetime64[ns](1), int64(5), object(1)\n",
+      "memory usage: 1.1+ MB\n"
      ]
     }
    ],
    "source": [
-    "for i in tables_dict.values():\n",
-    "    print(i)"
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "620"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_sql(\n",
+    "    \t\t'order_details',\n",
+    "        \tconn,\n",
+    "        \tindex=False,\n",
+    "        \tif_exists='append'\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (629354207.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [99]\u001b[1;36m\u001b[0m\n\u001b[1;33m    r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\\\"\u001b[0m\n\u001b[1;37m                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+\"\\\"+f\"{v}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (3213073698.py, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Input \u001b[1;32mIn [108]\u001b[1;36m\u001b[0m\n\u001b[1;33m    data=pd.read_excel(r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+'\\'+f\"{v}\")\u001b[0m\n\u001b[1;37m                                                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "for k,v in csv_dict.items():\n",
+    "    data=pd.read_excel(r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+'\\'+f\"{v}\")\n",
+    "    print(k)"
    ]
   }
  ],
