inicio ejercicio 5 + modificacion tipo de dato precio

--- a/ETL/notebook.ipynb
+++ b/ETL/notebook.ipynb
@@ -161,40 +161,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (629354207.py, line 1)",
+     "ename": "NameError",
+     "evalue": "name 'conn' is not defined",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [99]\u001b[1;36m\u001b[0m\n\u001b[1;33m    r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\\\"\u001b[0m\n\u001b[1;37m                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mUbuntu\\home\\ariel\\TP-Foundations\\ETL\\notebook.ipynb Celda 14\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell://wsl%24/Ubuntu/home/ariel/TP-Foundations/ETL/notebook.ipynb#X16sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m conn\u001b[39m.\u001b[39mclose()\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'conn' is not defined"
      ]
     }
    ],
    "source": [
-    "r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+\"\\\"+f\"{v}\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 108,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (3213073698.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Input \u001b[1;32mIn [108]\u001b[1;36m\u001b[0m\n\u001b[1;33m    data=pd.read_excel(r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+'\\'+f\"{v}\")\u001b[0m\n\u001b[1;37m                                                                                           ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
-     ]
-    }
-   ],
-   "source": [
-    "for k,v in csv_dict.items():\n",
-    "    data=pd.read_excel(r\"\\\\wsl$\\Ubuntu\\home\\ariel\\TP-Foundations\\ETL\\csv_files\"+'\\'+f\"{v}\")\n",
-    "    print(k)"
+    "conn.close()"
    ]
   }
  ],
